--- a/alerts.yaml
+++ b/alerts.yaml
@@ -1,6 +1,6 @@
 groups:
 
-- name: Cpu-usage
+- name: system-health
   rules:
     - alert: HostHighCpuLoad
       expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 90
@@ -9,22 +9,16 @@ groups:
         severity: warning
       annotations:
         summary: Host high CPU load (instance {{ $labels.instance }})
-        description: "CPU load is > 95%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        description: "CPU load > 90%\nVALUE = {{ $value }}"
 
-- name: Disk-usage
-  rules:
-    - alert: 'Low data disk space'
+    - alert: LowDataDiskSpace
       expr: ceil(((node_filesystem_size_bytes{mountpoint!="/boot"} - node_filesystem_free_bytes{mountpoint!="/boot"}) / node_filesystem_size_bytes{mountpoint!="/boot"} * 100)) > 95
       labels:
-        severity: 'critical'
+        severity: critical
       annotations:
-        title: "Disk Usage"
-        description: 'Partition : {{$labels.mountpoint}}'
-        summary: "Disk usage is `{{humanize $value}}%`"
-        host: "{{$labels.instance}}"
+        summary: "Low disk space on {{ $labels.instance }}"
+        description: "Partition: {{ $labels.mountpoint }}, Usage: {{ humanize $value }}%"
 
-- name: Memory-usage
-  rules:
     - alert: HostOutOfMemory
       expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 8
       for: 10m
@@ -32,60 +26,51 @@ groups:
         severity: warning
       annotations:
         summary: Host out of memory (instance {{ $labels.instance }})
-        description: "Node memory is filling up (< 8% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        description: "Available memory < 8%\nVALUE = {{ $value }}"
 
-- name: Disk-usage-check
-  rules:
-    - alert: Host Out Of DiskSpace
-      expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 10 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
+    - alert: HostOutOfDiskSpace
+      expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 10 and ON(instance, device, mountpoint) node_filesystem_readonly == 0
       for: 5m
       labels:
         severity: warning
       annotations:
-        title: "Low Disk space"
-        summary: Host out of disk space (instance {{ $labels.instance }})
-        description: "Disk is getting full (< 10% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
+        summary: Low disk space (instance {{ $labels.instance }})
+        description: "Disk space < 10%\nAvailable = {{ $value }}%"
 
-- name: CPU-load
-  rules:
     - alert: HighNodeCPU
-      expr: rate(node_load15[5m])*100 > 80
+      expr: rate(node_load15[5m]) * 100 > 80
       for: 5m
       labels:
         severity: warning
       annotations:
-        summary: "High CPU load (instance {{ $labels.instance }})"
-        description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+        summary: High 15m CPU load ({{ $labels.instance }})
+        description: "Load average > 80%\nVALUE = {{ $value }}"
 
-- name: site-down
+- name: network-probes
   rules:
     - alert: SiteDown
       expr: probe_success == 0
       for: 30s
       labels:
-        severity: "critical"
+        severity: critical
       annotations:
-        summary: "Site {{ $labels.instance }} down"
-        description: "Blackbox TCP probe failed for MySQL port 3306 on {{ $labels.instance }}"
+        summary: "Site down: {{ $labels.instance }}"
+        description: "Blackbox TCP probe failed (possibly VPN or network down)"
 
-- name: status-other-than-200
-  rules:
-    - alert: http-200-fail
+    - alert: HTTP200Fail
       expr: probe_http_status_code != 200
       for: 10s
       labels:
         severity: critical
       annotations:
-        summary: "HTTP 200 Fail"
-        description: "HTTP status code other than \"200\" has been returned\n HTTP STATUS {{ $value }}"
+        summary: "HTTP 200 check failed"
+        description: "Expected HTTP 200, got {{ $value }} from {{ $labels.instance }}"
 
-- name: mysql-down
-  rules:
     - alert: MySQLPortDown
-      expr: probe_http_status_code{instance=~"mysql-.*"} == 0
+      expr: probe_success{instance=~"mysql-.*"} == 0
       for: 10s
       labels:
         severity: critical
       annotations:
-        summary: "MySQL instance down - {{ $labels.instance }}"
-        description: "Blackbox TCP probe failed for MySQL port 3306 on {{ $labels.instance }}"
+        summary: "MySQL down on {{ $labels.instance }}"
+        description: "TCP connection to MySQL port 3306 failed (likely VPN issue)"
