--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -50,14 +50,14 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+      
   - job_name: 'blackbox'
     metrics_path: /probe
     params:
-     module: [http_2xx] 
+     module: [tcp_connect] 
     static_configs:
     - targets:
-       - https://172.20.22.64:3306
-
+       - https://10.10.51.147:3306
        
     relabel_configs:
       - source_labels: [__address__]
