--- a/alerts.yaml
+++ b/alerts.yaml
@@ -1,60 +1,76 @@
 groups:
 
-- name: Cpu-usage
+- name: system-health
   rules:
-  - alert: HostHighCpuLoad
-    expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 85
-    for: 3m
-    labels:
-      severity: warning
-    annotations:
-      summary: Host high CPU load (instance {{ $labels.instance }})
-      description: "CPU load is > 95%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
-      
-- name: Disk-usage
-  rules:
-  - alert: 'Low data disk space'
-    expr: ceil(((node_filesystem_size_bytes{mountpoint!="/boot"} - node_filesystem_free_bytes{mountpoint!="/boot"}) / node_filesystem_size_bytes{mountpoint!="/boot"} * 100)) > 95
-    labels:
-      severity: 'critical'
-    annotations:
-      title: "Disk Usage"
-      description: 'Partition : {{$labels.mountpoint}}'
-      summary: "Disk usage is `{{humanize $value}}%`"
-      host: "{{$labels.instance}}"
+    - alert: HostHighCpuLoad
+      expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 90
+      for: 3m
+      labels:
+        severity: warning
+      annotations:
+        summary: Host high CPU load (instance {{ $labels.instance }})
+        description: "CPU load > 90%\nVALUE = {{ $value }}"
 
+    - alert: LowDataDiskSpace
+      expr: ceil(((node_filesystem_size_bytes{mountpoint!="/boot"} - node_filesystem_free_bytes{mountpoint!="/boot"}) / node_filesystem_size_bytes{mountpoint!="/boot"} * 100)) > 95
+      labels:
+        severity: critical
+      annotations:
+        summary: "Low disk space on {{ $labels.instance }}"
+        description: "Partition: {{ $labels.mountpoint }}, Usage: {{ humanize $value }}%"
 
-- name: Memory-usage
-  rules:
-  - alert: HostOutOfMemory
-    expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 8
-    for: 10m
-    labels:
-      severity: warning
-    annotations:
-      summary: Host out of memory (instance {{ $labels.instance }})
-      description: "Node memory is filling up (< 8% left)\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+    - alert: HostOutOfMemory
+      expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 8
+      for: 10m
+      labels:
+        severity: warning
+      annotations:
+        summary: Host out of memory (instance {{ $labels.instance }})
+        description: "Available memory < 8%\nVALUE = {{ $value }}"
 
-- name: Disk-usage-check
-  rules:
-  - alert: Host Out Of DiskSpace
-    expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 10 and ON (instance, device, mountpoint) node_filesystem_readonly == 0
-    for: 5m
-    labels:
-      severity: warning
-    annotations:
-      title: "Low Disk space"
-      summary: Host out of disk space (instance {{ $labels.instance }})
-      description: "Disk is getting full (< 10% left)\n  Available Space is only= {{ $value }} %\n  LABELS = {{ $labels }}"
+    - alert: HostOutOfDiskSpace
+      expr: (node_filesystem_avail_bytes * 100) / node_filesystem_size_bytes < 10 and ON(instance, device, mountpoint) node_filesystem_readonly == 0
+      for: 5m
+      labels:
+        severity: warning
+      annotations:
+        summary: Low disk space (instance {{ $labels.instance }})
+        description: "Disk space < 10%\nAvailable = {{ $value }}%"
 
-     
-- name: CPU-load
+    - alert: HighNodeCPU
+      expr: rate(node_load15[5m]) * 100 > 80
+      for: 5m
+      labels:
+        severity: warning
+      annotations:
+        summary: High 15m CPU load ({{ $labels.instance }})
+        description: "Load average > 80%\nVALUE = {{ $value }}"
+
+- name: network-probes
   rules:
-  - alert: HighNodeCPU
-    expr: rate(node_load15[5m])*100 > 80
-    for : 5m
-    labels:
-      severity: warning
-    annotations:
-      summary: "High CPU load (instance {{ $labels.instance }})"
-      description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+    - alert: SiteDown
+      expr: probe_success == 0
+      for: 30s
+      labels:
+        severity: critical
+      annotations:
+        summary: "Site down: {{ $labels.instance }}"
+        description: "Blackbox TCP probe failed (possibly VPN or network down)"
+
+    - alert: HTTP200Fail
+      expr: probe_http_status_code != 200
+      for: 10s
+      labels:
+        severity: critical
+      annotations:
+        summary: "HTTP 200 check failed"
+        description: "Expected HTTP 200, got {{ $value }} from {{ $labels.instance }}"
+
+    - alert: MySQLPortDown
+      expr: probe_success{instance=~"mysql-.*"} == 0
+      for: 10s
+      labels:
+        severity: critical
+      annotations:
+        summary: "MySQL down on {{ $labels.instance }}"
+        description: "TCP connection to MySQL port 3306 failed (likely VPN issue)"
