--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -51,5 +51,19 @@ scrape_configs:
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
       
-
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+     module: [tcp_connect] 
+    static_configs:
+    - targets:
+       - 192.168.176.48:31192
+       
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter-0-2:9115 
       
