--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -51,13 +51,13 @@ scrape_configs:
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
 
-  - job_name: 'blackbox-mysql'
+  - job_name: 'app_db_health'
+    scrape_interval: 15s
     metrics_path: /probe
     params:
-     module: [tcp_connect] 
+      module: [http_2xx]
     static_configs:
-    - targets:
-       - 172.20.22.6:3306
+      - targets: ['mysql-healthcheck-3-11:5000/health/db']
        
     relabel_configs:
       - source_labels: [__address__]
