--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -66,4 +66,19 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: blackbox-exporter-0-2:9115
+
+- job_name: 'toplist-check'
+  scrape_interval: 15s
+  metrics_path: /probe
+  params:
+    module: [tcp_connect]
+  static_configs:
+    - targets: ['192.168.130.209:31192']
+  relabel_configs:
+    - source_labels: [__address__]
+      target_label: __param_target
+    - source_labels: [__param_target]
+      target_label: instance
+    - target_label: __address__
+      replacement: blackbox-exporter-0-2:9115
       
