--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -65,5 +65,5 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: blackbox-exporter-0-2:9115
+        replacement: 10.128.46.248:9115
       
