--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -26,7 +26,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.31.154:9100','172.31.71.188:9100','172.31.48.249:9100','172.31.57.34:9100']
+    - targets: ['172.31.31.154:9100','172.31.71.188:9100','172.31.48.249:9100','172.31.69.39:9100','172.31.51.177:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
