--- a/alerts.yaml
+++ b/alerts.yaml
@@ -3,8 +3,8 @@ groups:
 - name: Cpu-usage
   rules:
   - alert: HostHighCpuLoad
-    expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 1
-    for: 1m
+    expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[2m])) * 100) > 0
+    for: 3m
     labels:
       severity: warning
     annotations:
@@ -14,7 +14,7 @@ groups:
 - name: Disk-usage
   rules:
   - alert: 'Low data disk space'
-    expr: ceil(((node_filesystem_size_bytes{mountpoint!="/boot"} - node_filesystem_free_bytes{mountpoint!="/boot"}) / node_filesystem_size_bytes{mountpoint!="/boot"} * 100)) > 5
+    expr: ceil(((node_filesystem_size_bytes{mountpoint!="/boot"} - node_filesystem_free_bytes{mountpoint!="/boot"}) / node_filesystem_size_bytes{mountpoint!="/boot"} * 100)) > 1
     labels:
       severity: 'critical'
     annotations:
@@ -27,7 +27,7 @@ groups:
 - name: Memory-usage
   rules:
   - alert: HostOutOfMemory
-    expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 8
+    expr: node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes * 100 < 0
     for: 10m
     labels:
       severity: warning
@@ -51,7 +51,7 @@ groups:
 - name: CPU-load
   rules:
   - alert: HighNodeCPU
-    expr: rate(node_load15[5m])*100 > 1
+    expr: node_load15 / count by (instance, job) (node_cpu_seconds_total{mode="idle"}) >=0
     for : 5m
     labels:
       severity: warning
