--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -19,7 +19,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.0.4:9100', '10.0.1.5:9100', '10.0.1.6:9100', '10.0.1.7:9100', '10.0.1.2:9100']
+    - targets: ['10.0.0.4:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
