--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -31,8 +31,8 @@ scrape_configs:
       password: 4FTZOx9ACdbAw65WJH1u
     # Optional TLS configuration; see https://prometheus.io/docs/operating/configuration/#<tls_config>
     #tls_config:
-    static_configs:
-      - targets: ['appz.1276c99e.lowtouch.cloud:443/logs.alpha-dev/']
+    #static_configs:
+    #  - targets: ['appz.1276c99e.lowtouch.cloud:443/logs.alpha-dev/']
       
   - job_name: 'node-exporter'
     static_configs:
